Save/load InferenceResult instead of RAG